atualizando as imagens

--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,7 @@
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sapiente officiis unde numquam hic! Ex dolores, explicabo quaerat, itaque sit dolorum laborum sunt error ipsa corrupti porro quasi dolore impedit optio!
                 </p>
             </div>
-            <img class="event__image" src="./images/frontend.png" alt="Front-end">
+            <img class="event__image" src="./images/ui-ux.png" alt="ui-ux">
         </div>
     </section>
 
@@ -69,7 +69,7 @@
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sapiente officiis unde numquam hic! Ex dolores, explicabo quaerat, itaque sit dolorum laborum sunt error ipsa corrupti porro quasi dolore impedit optio!
                 </p>
             </div>
-            <img class="event__image" src="./images/frontend.png" alt="Front-end">
+            <img class="event__image" src="./images/data.png" alt="Data Science">
         </div>
     </section>
 
@@ -81,7 +81,7 @@
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sapiente officiis unde numquam hic! Ex dolores, explicabo quaerat, itaque sit dolorum laborum sunt error ipsa corrupti porro quasi dolore impedit optio!
                 </p>
             </div>
-            <img class="event__image" src="./images/frontend.png" alt="Front-end">
+            <img class="event__image" src="./images/backend.png" alt="Back-end">
         </div>
     </section>
 
