correção no header

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
         <div class="container">
             <img class="hero__logo" src="./images/ebac_logo.svg" alt="ebac">
             <p class="hero__text">
-                O maior evendo de tecnologia do Brasil começa em <span id="contador"></span>
+                O maior evento de tecnologia do Brasil começa em <span id="contador"></span>
             </p>
             <div class="infos-bar">
                 <ul class="infos-bar__infos">
@@ -32,7 +32,7 @@
                         12/12/2024 as 19hrs
                     </li>
                 </ul>
-                <a class="button button--primary" href="#">Garante sua vega</a>
+                <a class="button button--primary" href="#">Garanta sua vega</a>
             </div>
         </div>
     </header>
